client/styles/index.scss
/* ... */
@media only screen and (max-width: 576px) {

  #landing-page {
    height: 680px;
    background-image: url(/mobile.jpeg);
    background-size:contain;
   background-position: center;
   background-repeat: no-repeat;
}

#landing-page::before {
  content: ''; 
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 680px;
  background-color: rgba(0, 0, 0, 0.2); 
  z-index: 1; 
}

#landing-page > * {
  position: relative; 
  z-index: 2; 
}

  .contact-form {
    min-width: 380px;
  }
  


  // About us page

  .about-us {
    font-size: 16px;
  }

  .about-us p {
     padding: 0;
}


  .about-hr {
    width: 100%;
  }




  // Main page

  .section-text {
    font-size: 16px;
}



.section-header {
    font-size: 24px;
}





  .banner {
      font-size: 32px;
      width: 425px;
      height: 200px;
      margin-bottom: 90px;
  }

  // Contact page 

  .contact-text {
    font-size: 18px;
  }

  // Footer

  .footer-text {
      font-size: 12px;
  }

}



@media only screen and (max-width: 480px) {

.banner {
  margin-bottom: 90px;
}



  .about-hr {
    width: 100%;
  }

  // Main page

  .section-text {
    font-size: 16px;
}

.section-header {
    font-size: 24px;
}
}

@media screen and (max-width: 390px) {

  #landing-page p {
    font-size: 28px;
  }

  .hollow-button, .solid-button {
    width: 160px;
    font-size: 12px;
  }
  
  .banner {
    font-size: 32px;
    width: 380px;
    height: 180px;
}
}

